--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "https://www.loroktm.com",
   "display": "standalone",
   "background_color": "#fff",
-  "theme_color": "#000",
+  "theme_color": "#222e2e",
   "description": "Blog tentang Electronic, Wisata, Info, dan Kumpulan Lirik Lagu terbaru dan populer lengkap dengan terjemahan",
   "icons": [{
     "src": "https://2.bp.blogspot.com/-wzXPZt-JY50/W2dnONhi9_I/AAAAAAAASKs/Qk_-qmOtwqQkNS14eZ2M5pSxiU77YZJRQCLcBGAs/s1600/logo-192.png",
