--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,11 @@
   "theme_color": "#000",
   "description": "Blog tentang Electronic, Wisata, Info, dan Kumpulan Lirik Lagu terbaru dan populer lengkap dengan terjemahan",
   "icons": [{
+      "src": "https://2.bp.blogspot.com/-wzXPZt-JY50/W2dnONhi9_I/AAAAAAAASKs/Qk_-qmOtwqQkNS14eZ2M5pSxiU77YZJRQCLcBGAs/s1600/logo-192.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
+  }, {
     "src": "https://2.bp.blogspot.com/-wzXPZt-JY50/W2dnONhi9_I/AAAAAAAASKs/Qk_-qmOtwqQkNS14eZ2M5pSxiU77YZJRQCLcBGAs/s1600/logo-192.png",
     "sizes": "48x48",
     "type": "image/png"
